chore: cleanup and use new features from Java 17:
- replace Collectors.toList() with plain toList() where possible.