@@ -30,7 +30,6 @@ import java.util.concurrent.Future;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReferenceArray;
-import java.util.stream.Collectors;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -734,7 +733,7 @@ public class SolverConcurrencyTest {
                   ex.printStackTrace(pw);
                   return sw.toString();
                 })
-            .collect(Collectors.toList());
+            .toList();
     assertWithMessage(
             "Test %s failed with exception(s): %s",
             testName, Joiner.on("\n").join(exceptionDetails))
